--- a/src/Footer.css
+++ b/src/Footer.css
@@ -1,15 +1,15 @@
-.fa-github:hover {
+.fa-github.link:hover {
   color: #c050ff;
   text-decoration: none;
 }
 
-.fa-linkedin:hover {
-  color: #00bd7b;
+.fa-linkedin.link:hover {
+  color: #43e0ff;
   text-decoration: none;
 }
 
-.fa-envelope:hover {
-  color: #43e0ff;
+.fa-envelope.link:hover {
+  color: #00bd7b;
   text-decoration: none;
 }
 
