--- a/src/WorkCard.css
+++ b/src/WorkCard.css
@@ -14,6 +14,33 @@
   background-image: url('./screens/coursereportmobile.png');
 }
 
+.coursereportapp {
+  background-image: url('./screens/coursereportapp.png');
+}
+
+.coursereportapp h2,
+.coursereportapp h3,
+.warbler h2,
+.warbler h3 {
+  color: #23242b;
+}
+
+.coursereportapp .WordCard-button-link,
+.warbler .WordCard-button-link {
+  width: 100%;
+  padding: 5px;
+  border-radius: 1px;
+  border-color: #23242b;
+  border-style: solid;
+  margin-top: 15px;
+}
+
+.coursereportapp .WordCard-button-link:hover,
+.warbler .WordCard-button-link:hover {
+  background-color: white;
+  border-color: white;
+}
+
 .WorkCard-image {
   height: 0;
   width: 100%;
