--- a/src/WorkCard.css
+++ b/src/WorkCard.css
@@ -26,15 +26,22 @@
   background-image: url('./screens/algorithms.jpg');
 }
 
+.microblog {
+  background-image: url('./screens/microblog.png');
+}
+
 .coursereportapp h2,
 .coursereportapp h3,
 .warbler h2,
-.warbler h3 {
+.warbler h3,
+.microblog h2,
+.microblog h3 {
   color: #23242b;
 }
 
 .coursereportapp .WordCard-button-link,
-.warbler .WordCard-button-link {
+.warbler .WordCard-button-link,
+.microblog .WordCard-button-link {
   width: 20vw;
   padding: 5px;
   border-radius: 1px;
@@ -44,7 +51,8 @@
 }
 
 .coursereportapp .WordCard-button-link:hover,
-.warbler .WordCard-button-link:hover {
+.warbler .WordCard-button-link:hover,
+.microblog .WordCard-button-link:hover {
   background-color: white;
   border-color: white;
 }
