--- a/src/WorkCard.css
+++ b/src/WorkCard.css
@@ -30,18 +30,25 @@
   background-image: url('./screens/microblog.png');
 }
 
+.humbleabode {
+  background-image: url('./screens/flyinghouse.png');
+}
+
 .coursereportapp h2,
 .coursereportapp h3,
 .warbler h2,
 .warbler h3,
 .microblog h2,
-.microblog h3 {
+.microblog h3,
+.humbleabode h2,
+.humbleabode h3 {
   color: #23242b;
 }
 
 .coursereportapp .WordCard-button-link,
 .warbler .WordCard-button-link,
-.microblog .WordCard-button-link {
+.microblog .WordCard-button-link,
+.humbleabode .WordCard-button-link {
   width: 20vw;
   padding: 5px;
   border-radius: 1px;
@@ -52,7 +59,8 @@
 
 .coursereportapp .WordCard-button-link:hover,
 .warbler .WordCard-button-link:hover,
-.microblog .WordCard-button-link:hover {
+.microblog .WordCard-button-link:hover,
+.humbleabode .WordCard-button-link:hover {
   background-color: white;
   border-color: white;
 }
